<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_to_whom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_whom"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_theme"
        app:layout_constraintEnd_toStartOf="@id/tv_to_whom_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/tv_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="30dp"
        android:text="@string/theme"
        app:layout_constraintBottom_toTopOf="@+id/tv_message"
        app:layout_constraintEnd_toStartOf="@id/tv_theme_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/tv_to_whom"
        app:layout_constraintTop_toBottomOf="@+id/tv_to_whom" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:layout_marginBottom="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_theme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_to_whom"
        app:layout_constraintHorizontal_bias="0" />

    <TextView
        android:id="@+id/tv_to_whom_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_to_whom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_to_whom"
        app:layout_constraintTop_toTopOf="@+id/tv_to_whom" />

    <TextView
        android:id="@+id/tv_theme_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintBottom_toBottomOf="@+id/tv_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_theme"
        app:layout_constraintTop_toTopOf="@id/tv_theme" />

    <TextView
        android:id="@+id/tv_message_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_message"
        app:layout_constraintTop_toBottomOf="@+id/tv_message"
        app:layout_constraintVertical_bias="0.02"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
